# mcp-xiaoai-hass

./: README.md  pyproject.toml
src/xiaoai/: server.py
