[project]
version = "0.0.5"
name = "mcp-xiaoai-hass"
description = "MCP server for publish wechat moments"
dependencies = [
    "mcp"
]
urls = [
    "https://github.com/geminiwen/mcp-wechat-moments"
]
authors = [
    {name = "Gemini Wen", email = "coffeesherk@gmail.com"}
]
requires-python = ">= 3.11"
readme = "README.md"

[project.scripts]
mcp-wechat-moments = "moments.server:main"

[tool.setuptools.package-data]
"moments" = ["*.scpt"]
"*" = ["README.md", " misc/intro.png"]